--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,4 +1,4 @@
-@(title: String)(content: Html)
+@(title: String)(content: Html)(implicit flash: Flash)
 
 <!DOCTYPE html>
 
@@ -10,6 +10,15 @@
         <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
     </head>
     <body>
-        @content
+        <section id="content">
+            @content
+        </section>
+        <section id="messages">
+            @flash.get("success").map { message =>
+                <div class="alert-message warning">
+                    @message
+                </div>
+            }
+        </section>
     </body>
 </html>
