--- a/app/views/teams/show.scala.html
+++ b/app/views/teams/show.scala.html
@@ -1,7 +1,6 @@
-@(team: Team)
+@(team: Team)(implicit flash: Flash)
 
 @main(Messages("teams.show.title")) {
     
-    <h1>@Messages("teams.show.title")</h1>
-
+    <h1>@Messages("teams.show.title", team.name)</h1>
 }
