--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -7,10 +7,15 @@
         <title>@title</title>
         <link rel="stylesheet" type="text/css" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <link rel="stylesheet" type="text/css" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.min.css")">
+        <link rel="stylesheet" type="text/css" media="screen" href="@routes.Assets.at("stylesheets/bootstrap-responsive.min.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
         <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
     </head>
     <body>
+        <div class="container">
+        <nav>
+            @nav()
+        </nav>
         <section id="content">
             @content
         </section>
@@ -21,5 +26,6 @@
                 </div>
             }
         </section>
+        </div>
     </body>
 </html>
